--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "discord.js": "^11.1.0",
-    "request": "2.81.0"
+    "jimp": "^0.9.3",
+    "request": "2.81.0",
+    "ws": "^7.2.1"
   }
 }
