--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node bot.js"
   },
   "dependencies": {
-    "discord.js": "^11.1.0",
+    "cryptiles": "^4.1.2",
+    "discord.js": "^12.0.2",
     "jimp": "^0.9.3",
     "request": "2.81.0",
     "ws": "^7.2.1"
